# plex_offline_launcher3.0

./: README.md  plex_token_retriever.py  pyproject.toml  run.py
src/: app.py  config.py  requirements.txt
src/templates/: base.html  home_dashboard.html  item_details.html  library.html  player.html  search_results.html  user_select.html
